@@ -41,6 +41,7 @@ static void lh7a40x_timer_init (void)
 {
 	/* 2kHz free running timer*/
   __REG (TIMER1_PHYS + TIMER_CONTROL) = (1<<7) | (0<<6) | (0<<3);
+  __REG (TIMER1_PHYS + TIMER_VALUE) = 0xffff;
   __REG (TIMER2_PHYS + TIMER_CONTROL) = 0;
   __REG (TIMER3_PHYS + TIMER_CONTROL) = 0;
 }
@@ -72,7 +73,7 @@ unsigned long timer_read (void)
 
 unsigned long timer_delta (unsigned long start, unsigned long end)
 {
-  return end - start;
+  return (end - start)/2;
 }
 
 static __service_2 struct service_d lh7a40x_timer_service = { 
